[package]
name = "secure_contacts"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Secure reimplementation of the contacts manager"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
fs2 = "0.4"        # file locking
tempfile = "3.6"   # secure temp files
uuid = { version = "1.2", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
